--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -44,6 +44,7 @@ body {
 .card-container {
   display: flex;
   flex-direction: row;
+  align-items: center;
   justify-content: space-evenly;
   flex-wrap: wrap;
 }
