--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -71,3 +71,22 @@ html {
   justify-content: center;
   list-style-type: none;
 }
+.poke-card__info {
+  color: #fff;
+}
+.poke-card__button-container {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+}
+
+.button {
+  font-size: 10px;
+  font-weight: 900;
+  width: 80px;
+  height: 20px;
+  background-color: #fff;
+  cursor: pointer;
+  border: none;
+}
