--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -24,19 +24,22 @@ html {
 
 .navigation-container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   border: 1px solid black;
 }
 
 .navigation__menu {
-  color: #fff;
+  width: 600px;
+  font-weight: 900;
+  font-size: 50px;
+  color: #ffc300;
   padding: 0;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   list-style-type: none;
 }
 .card-container {
