--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -29,11 +29,15 @@ html {
   justify-content: center;
   border: 1px solid black;
 }
+.header-logo {
+  height: 200px;
+  width: 500px;
+}
 
 .navigation__menu {
-  width: 600px;
+  width: 500px;
   font-weight: 900;
-  font-size: 50px;
+  font-size: 30px;
   color: #ffc300;
   padding: 0;
   display: flex;
@@ -41,6 +45,14 @@ html {
   align-items: center;
   justify-content: space-around;
   list-style-type: none;
+}
+.navigation__menu li {
+  display: flex;
+  align-items: center;
+}
+.menu__pokeball {
+  width: 35px;
+  height: 35px;
 }
 .card-container {
   display: flex;
