added after image to cards and new css

--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -27,7 +27,8 @@ html {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border: 1px solid black;
+
+  margin-bottom: 100px;
 }
 .header-logo {
   height: 200px;
@@ -47,6 +48,8 @@ html {
   list-style-type: none;
 }
 .navigation__menu li {
+  cursor: pointer;
+
   display: flex;
   align-items: center;
 }
@@ -57,26 +60,44 @@ html {
 .card-container {
   display: flex;
   flex-direction: row;
-  align-items: center;
-  justify-content: space-evenly;
+  gap: 80px;
+  justify-content: space-around;
   flex-wrap: wrap;
 }
 .poke-card {
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   width: 150px;
   height: 200px;
   align-items: center;
-  background-color: #05275e;
+  background-image: url(../images/grass-background.png);
   border: 3px solid black;
+  gap: 20px;
+}
+
+.pokemon-image {
+  display: flex;
+  position: relative;
+  top: -30px;
+  height: 200px;
+  width: 200px;
 }
 .info-container {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
 }
+.poke-card__info:after {
+  display: none;
+  position: absolute;
+  top: -190px;
+  left: -60px;
 
+  content: url("../images/poke-gif.gif");
+}
 .poke-card ul {
   color: #fff;
   padding: 0;
@@ -86,17 +107,27 @@ html {
   justify-content: center;
   list-style-type: none;
 }
+
 .poke-card__info {
-  color: #fff;
+  font-size: 16px;
+  position: relative;
+  top: -60px;
+  font-weight: 900;
+  color: #ffc300;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
+    1px 1px 0 #000;
 }
 .poke-card__button-container {
+  position: relative;
+  top: -80px;
   margin-top: 10px;
   display: flex;
   flex-direction: column;
-  gap: 2px;
+  gap: 5px;
 }
 
 .button {
+  border-radius: 10px;
   font-size: 10px;
   font-weight: 900;
   width: 80px;
@@ -104,6 +135,11 @@ html {
   background-color: #fff;
   cursor: pointer;
   border: none;
+  border: 2px solid black;
+}
+.button:hover {
+  color: #fff;
+  background-color: #ffc300;
 }
 
 .page-jump {
