--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -91,7 +91,7 @@ html {
   justify-content: center;
 }
 .poke-card__info:after {
-  display: none;
+  opacity: 0;
   position: absolute;
   top: -190px;
   left: -60px;
