--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -140,6 +140,16 @@ html {
 }
 
 .page-jump {
-  border: 1px solid black;
+  margin: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 100px;
+}
+.button--next-page {
+  background-color: #ffc300;
+
+  font-size: 30px;
+  height: 80px;
+  width: 200px;
 }
