--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -83,6 +83,7 @@ html {
   top: -30px;
   height: 200px;
   width: 200px;
+  transition: 1s;
 }
 .info-container {
   position: relative;
@@ -94,6 +95,7 @@ html {
   opacity: 0;
   position: absolute;
   width: 150px;
+  transition: 1s;
 }
 .poke-card ul {
   color: #fff;
